[gd_scene load_steps=61 format=2]

[ext_resource path="res://Enemies/Lich/Lich_idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/State_Machine.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Boko/Move.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Boko/Idle.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Lich/Attack.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Lich/Fireball/Lich_fireball.png" type="Texture" id=6]
[ext_resource path="res://Helpers/Sprite_Handler.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Hit.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Stamina_Bar_Frames.tres" type="SpriteFrames" id=9]
[ext_resource path="res://Enemies/Stamina_Bar.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Boko/Slash_Hitbox.gd" type="Script" id=11]
[ext_resource path="res://Enemies/Sprite.gd" type="Script" id=12]
[ext_resource path="res://Enemies/Move_Particles.tscn" type="PackedScene" id=13]
[ext_resource path="res://Enemies/Die.gd" type="Script" id=14]
[ext_resource path="res://Enemies/Eyes.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Components/Component_Manager.tscn" type="PackedScene" id=16]
[ext_resource path="res://Enemies/Stamina_Bar.tscn" type="PackedScene" id=17]
[ext_resource path="res://Enemies/Death_Right.tres" type="Animation" id=18]
[ext_resource path="res://Enemies/Death_Left.tres" type="Animation" id=19]
[ext_resource path="res://Shaders/Idle.tres" type="Material" id=20]
[ext_resource path="res://Enemies/Shadow.tscn" type="PackedScene" id=21]
[ext_resource path="res://Enemies/Move.tres" type="Animation" id=22]
[ext_resource path="res://Enemies/Hit_Particles.tscn" type="PackedScene" id=23]
[ext_resource path="res://Enemies/Slash_Right.tres" type="Animation" id=24]
[ext_resource path="res://Enemies/Slash_Left.tres" type="Animation" id=25]
[ext_resource path="res://Enemies/Boko/Hitbox.gd" type="Script" id=26]
[ext_resource path="res://Enemies/Hearts.tscn" type="PackedScene" id=27]
[ext_resource path="res://Enemies/Foot_Hitbox.tscn" type="PackedScene" id=28]
[ext_resource path="res://Enemies/States/Carted.gd" type="Script" id=29]
[ext_resource path="res://Enemies/Lich/Lich_attack.png" type="Texture" id=30]
[ext_resource path="res://Enemies/Lich/Lich_move.png" type="Texture" id=31]
[ext_resource path="res://Enemies/Lich/Lich_Move_Animation.tres" type="Animation" id=32]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.46321
height = 0.377663

[sub_resource type="CapsuleShape2D" id=39]
radius = 3.14069
height = 5.28285

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 31 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 31 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 31 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 30 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 30 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 30 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 30 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "Grow",
"speed": 5.0
} ]

[sub_resource type="Animation" id=25]
resource_name = "Attack Right"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("..:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.19 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.19 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.08, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( 9, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.11, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, 20.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.56358
height = 4.52801

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("../Sprite_Handler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "flash_on"
}, {
"args": [  ],
"method": "flash_off"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.5

[sub_resource type="Animation" id=11]
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 0.99 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}

[node name="Lich" type="KinematicBody2D" groups=["Cartable", "Lich", "Monster"]]
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 23
script = ExtResource( 2 )
START_STATE = NodePath("States/Idle")
monster_type = "lich"

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 5
script = ExtResource( 26 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 39 )
__meta__ = {
"_editor_description_": ""
}

[node name="Foot_Hitbox" parent="." instance=ExtResource( 28 )]
collision_layer = 1
monitorable = false

[node name="Components" parent="." instance=ExtResource( 16 )]

[node name="Sprite_Handler" parent="." instance=ExtResource( 7 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 20 )
frames = SubResource( 12 )
animation = "Move"
speed_scale = 0.8
script = ExtResource( 12 )

[node name="Eyes" type="Sprite" parent="Sprite"]
visible = false
material = ExtResource( 20 )
texture = ExtResource( 15 )
offset = Vector2( 1, -1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Slash_Effect" type="AnimatedSprite" parent="Sprite" groups=["No_Flash"]]
visible = false
position = Vector2( -3, -6 )
z_index = 50
z_as_relative = false
frames = SubResource( 38 )
animation = "Grow"
frame = 2
offset = Vector2( 9, 0 )

[node name="Slash_Animation" type="AnimationPlayer" parent="Sprite/Slash_Effect"]
"anims/Attack Right" = SubResource( 25 )
anims/Slash_Left = ExtResource( 25 )
anims/Slash_Right = ExtResource( 24 )

[node name="Slash_Hitbox" type="Area2D" parent="Sprite/Slash_Effect" groups=["Monster_Hitbox"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Slash_Effect/Slash_Hitbox"]
scale = Vector2( 0.392614, 0.525361 )
shape = SubResource( 8 )
disabled = true

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/Death_Left = ExtResource( 19 )
anims/Death_Right = ExtResource( 18 )
anims/Hit = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/Move = ExtResource( 22 )
anims/Move_Lich = ExtResource( 32 )

[node name="Stamina_Bar" parent="." instance=ExtResource( 17 )]

[node name="Stamina_Bar2" type="AnimatedSprite" parent="." groups=["No_Flash"]]
visible = false
position = Vector2( 0, 10 )
scale = Vector2( 0.9952, 0.9952 )
frames = ExtResource( 9 )
frame = 1
script = ExtResource( 10 )

[node name="Bar_Animation" type="AnimationPlayer" parent="Stamina_Bar2"]
anims/Fill = SubResource( 11 )

[node name="Hearts" parent="." instance=ExtResource( 27 )]
script = null

[node name="Shadow" parent="." instance=ExtResource( 21 )]
position = Vector2( 0, 8.5 )
scale = Vector2( 0.75, 1 )

[node name="Move_Particles" parent="." instance=ExtResource( 13 )]
amount = 2
lifetime = 0.5

[node name="Hit_Particles" parent="." instance=ExtResource( 23 )]

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="States"]
script = ExtResource( 3 )
MAX_MOVESPEED = 75.0
MOVE_ANIMATION = ExtResource( 32 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Cooldown_Timer" type="Timer" parent="States/Attack"]
wait_time = 0.1
one_shot = true

[node name="Hit" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Cooldown" type="Timer" parent="States/Hit"]
wait_time = 0.5
one_shot = true

[node name="Carted" type="Node" parent="States"]
script = ExtResource( 29 )

[node name="Die" type="Node" parent="States"]
script = ExtResource( 14 )

[connection signal="hit" from="." to="Hearts" method="_on_Monster_hit"]
[connection signal="animation_finished" from="Sprite/Slash_Effect/Slash_Animation" to="States/Attack" method="_on_Slash_Animation_animation_finished"]
[connection signal="animation_finished" from="Sprite/Animation" to="." method="_on_animation_finished"]
[connection signal="animation_finished" from="Stamina_Bar2/Bar_Animation" to="Stamina_Bar2" method="_on_Bar_Animation_animation_finished"]
[connection signal="animation_started" from="Stamina_Bar2/Bar_Animation" to="Stamina_Bar2" method="_on_Bar_Animation_animation_started"]
[connection signal="timeout" from="States/Attack/Cooldown_Timer" to="States/Attack" method="_on_Cooldown_Timer_timeout"]
[connection signal="timeout" from="States/Hit/Cooldown" to="States/Hit" method="_on_Cooldown_timeout"]
